# serde_describe

./: Cargo.toml  Justfile  README.md  skipping_visitor_old
.github/workflows/: ci.yml
benchmark-suite/: Cargo.toml
benchmark-suite/benches/: bench.rs
benchmark-suite/data/: level.json
examples/: check.rs
serde_describe/: Cargo.toml
serde_describe/src/: anonymous_union.rs  builder.rs  deferred.rs  doctests.rs  dump.rs  indices.rs  pool.rs  schema.rs  ser.rs
serde_describe/src/tests/: evolution.rs
serde_describe_benchmark_suite/: Cargo.toml  RESULTS.md
serde_describe_benchmark_suite/benches/: bench.rs
serde_describe_benchmark_suite/data/: github_events.json
serde_describe_benchmark_suite/src/: github_events.rs  level.rs  lib.rs
src/: anonymous_union.rs  builder.rs  de.rs  described.rs  dump.rs  errors.rs  indices.rs  lib.rs  lossless_cast.rs  pool.rs  schema.rs  ser.rs  tests.rs  trace.rs
src/tests/: helpers.rs  mod.rs  roundtrip.rs  stress.rs
