[package]
name = "serde_describe"
version = "0.2.0"
edition = "2024"
description = "Make non-self-describing serde formats behave like they're self-describing."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cristicbz/serde_describe"
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
categories = ["encoding"]
keywords = ["serde_describe", "serde", "serialization", "self-describing", "format"]
rust-version = "1.88"

[dependencies]
indexmap = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
bitcode = { version = "0.6", features = ["serde"] }
maplit = "1.0.2"
postcard = { version = "1", features = ["use-std"] }
ron = { version = "0.12.0", features = ["integer128"] }
serde_bytes = "0.11.19"
