[workspace]
resolver = "3"
members = [
  "serde_describe",
  "serde_describe_benchmark_suite",
]

[workspace.package]
version = "0.2.2"

[workspace.dependencies]
serde_describe = { path = "./serde_describe" }

indexmap = "2"
serde = { version = "1", features = ["derive"] }

bitcode = { version = "0.6", features = ["serde"] }
maplit = "1.0.2"
postcard = { version = "1", features = ["use-std"] }
ron = { version = "0.12", features = ["integer128"] }
serde_bytes = "0.11"

[profile.samply]
inherits = "release"
debug = true
