[package]
name = "serde_describe_benchmark_suite"
version.workspace = true
edition = "2024"

[dependencies]
bitcode.workspace = true
postcard.workspace = true
serde_describe.workspace = true

chrono = { version = "0.4.43", features = ["serde"] }
pot = "3.0.1"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
zstd = "0.13.3"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "benchmark_sizes"
